@@ -1,6 +1,6 @@
 use Mojo::Base -strict;
 
-use Test::More tests => 354;
+use Test::More tests => 355;
 
 # "Quick Smithers. Bring the mind eraser device!
 #  You mean the revolver, sir?
@@ -66,7 +66,9 @@ is $res->code(428)->default_message, 'Precondition Required', 'right message';
 is $res->code(429)->default_message, 'Too Many Requests',     'right message';
 is $res->code(431)->default_message, 'Request Header Fields Too Large',
   'right message';
-is $res->code(449)->default_message, 'Retry With',            'right message';
+is $res->code(449)->default_message, 'Retry With', 'right message';
+is $res->code(451)->default_message, 'Unavailable For Legal Reasons',
+  'right message';
 is $res->code(500)->default_message, 'Internal Server Error', 'right message';
 is $res->code(501)->default_message, 'Not Implemented',       'right message';
 is $res->code(502)->default_message, 'Bad Gateway',           'right message';
