@@ -1,6 +1,7 @@
 
 3.0  2012-06-12
   - Code name "Rainbow", this is a major release.
+  - Added support for new HTTP status code.
   - Renamed Mojo::CookieJar to Mojo::UserAgent::CookieJar.
   - Improved message parser performance slightly.
   - Improved documentation. (ichesnokov, sri)
